[package]
name = "xrce-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
serde = { version = "1.0.160", default-features = false }

[dev-dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.1"
defmt-rtt = "0.4.0"
defmt = "0.3.4"
defmt-test = "0.3.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }

[target.thumbv7m-none-eabi.dev-dependencies.stm32f1xx-hal]
features = ["rt", "stm32f103"]
version = "0.10.0"

[target.thumbv7m-none-eabi.dev-dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[features]
default = ["little"]
little = []
big = []
profile-shared-memory = []
hard-liveliness-check = []

[lib]
harness = false

[[test]]
name = "integration"
harness = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-
