[package]
name = "xrce-client-rs"
version = "0.1.0"
edition = "2021"
keywords = ["arm", "cortex-m", "DDS", "no-std", "embedded-hal-driver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-io = { version = "0.6.0" }
serde = { version = "1.0.210", default-features = false }
static_cell = {  version = "2.1.0" }

[dev-dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.1"
defmt-rtt = "0.4.1"
defmt = "0.3.8"
defmt-test = "0.3.2"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }


[target.thumbv7m-none-eabi.dev-dependencies.stm32f1xx-hal]
features = ["rt", "stm32f103"]
version = "0.10.0"

[features]
default = ["little"]
little = []
big = []
profile-shared-memory = []
hard-liveliness-check = []

[lib]
harness = false

[[test]]
name = "integration"
harness = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-
